# ScanSentry

./: .gitignore
Backend/: CLAUDE.md  main.py  pyproject.toml
Frontend/: index.html  package.json
Frontend/src/: App.vue  style.css
Frontend/src/components/: Pagination.vue
